--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ap-ecom-shop",
+  "name": "nextjs-biolerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,7 +16,8 @@
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^11.1.2",
